crates/strider-analyze/tests/snapshots/v3__ppc32be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10000534:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ f2", shape=house, fillcolor="#163030"];
  "12" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x10000534:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "44" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ f1", shape=house, fillcolor="#163030"];
  "12" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v47" [color="#888888", style=dashed];
  "v47" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v48" [color="#888888", style=dashed];
  "v48" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r4", shape=house, fillcolor="#163030"];
  "12" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v49" [color="#888888", style=dashed];
  "v49" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v50" [color="#888888", style=dashed];
  "v50" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ r9", shape=house, fillcolor="#163030"];
  "12" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v53" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v53" [color="#888888", style=dashed];
  "v53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v55" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v55" [color="#888888", style=dashed];
  "v55" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ Mem", shape=house, fillcolor="#163030"];
  "12" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "57" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "59" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v53" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "13" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v53" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "62" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v55" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "5" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v55" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "70" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "82" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "86" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "86" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
